<resources>
    <string name="app_name">Hisab Khata</string>

    //add
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="login">Login</string>
    <string name="enter_email_user_name">Enter email / User name</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_email">Enter email</string>
    <string name="user_name">User name</string>
    <string name="full_name">Full Name</string>
    <string name="shop_name">Shop Name</string>
    <string name="phone_no">Phone No.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="welcome"><![CDATA[<< WELCOME >>]]></string>
    <string name="amount">Amount</string>
    <string name="rest_amount">Rest Amount</string>
    <string name="next">Next</string>
    <string name="add_data">Add Rest Data</string>
    <string name="_00">00</string>
    <string name="payed_amount">Payed Amount</string>
    <string name="add_payed_data">Add Payed Data</string>
    <string name="finish">Finish</string>
    <string name="description">Description</string>
    <string name="total_due">Total Due</string>
    <string name="product_name">Product Name</string>
    <string name="date">Date</string>
    <string name="total_payed">Total Payed</string>
    <string name="total_sale">Total Sale</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="cancle">Cancle</string>
    <string name="save">Save</string>
    <string name="change_profile">Change profile</string>
    <string name="sale">Sale</string>
    <string name="payed">Payed</string>
    <string name="customer_name">Customer name</string>
    <string name="signin_with_phone">SignIn With Phone</string>
    <string name="signed_out">Signed Out</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone">Phone</string>
    <string name="send_code">Send Code</string>
    <string name="resend_code">Resend Code</string>
    <string name="code">Code</string>
    <string name="verify_code">Verify Code</string>
    <string name="set_user_info">Set User Info</string>
    <string name="log_out">Logout</string>
    <string name="username">UserName</string>
    <string name="example_gmail_com">Example@gmail.com</string>
    <string name="tell_your_friend">Tell your friend</string>
    <string name="redeem_history">Redeem History</string>
    <string name="user">User</string>
    <string name="shop_owner">Shop Owner</string>
    <string name="customer">Customer</string>
    <string name="owner_name">Owner Name</string>

    <string name="navigation_open">Open navigation drawer</string>
    <string name="navigation_close">Close navigation drawer</string>
    <string name="address">Address</string>
    <string name="add_description">Add Description</string>
    <string name="home">Home</string>
    <string name="my_account">My account</string>
    <string name="new_customer">New customer</string>
    <string name="logout">Logout</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="about_us">About us</string>
    <string name="taka">taka</string>
    <string name="add_customer">Add Customer</string>
    <string name="search">Search...</string>
</resources>