<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/home"/>
        <item
            android:id="@+id/nav_profile"
            android:title="@string/my_account"
            android:icon="@drawable/person"/>
        <item
            android:id="@+id/nav_newCustomer"
            android:title="@string/new_customer"
            android:icon="@drawable/person_add"/>
        <item
            android:id="@+id/nav_logOut"
            android:title="@string/logout"
            android:icon="@drawable/logout"/>
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/share"
                android:icon="@drawable/share"/>
            <item
                android:id="@+id/nav_aboutUs"
                android:title="@string/about_us"/>
        </menu>
    </item>
</menu>