<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Customer.AddCustomer">

    <TextView
        android:id="@+id/textViewId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/add_customer"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/save"
        android:layout_below="@+id/textViewId"
        android:layout_alignTop="@id/textViewId"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/cutomerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:layout_marginTop="20dp"
                android:hint="@string/customer_name"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/Customer_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:layout_marginTop="20dp"
                android:hint="@string/phone_no"
                android:inputType="phone"
                android:padding="10dp"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:layout_marginTop="20dp"
                android:hint="@string/address"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@android:color/black"/>
        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/btnshape"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>