<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetUserInfoActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="#F03ABA23"
        android:text="@string/set_user_info"
        android:textColor="#FFF"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/shopName_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableStart="@drawable/home"
                    android:drawablePadding="8dp"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/shop_name"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@android:color/black"/>

                <EditText
                    android:id="@+id/username_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableStart="@drawable/person"
                    android:drawablePadding="8dp"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/user_name"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@android:color/black"/>

                <EditText
                    android:id="@+id/phone_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:layout_marginTop="10dp"
                    android:hint="@string/phone_no"
                    android:drawableStart="@drawable/phone"
                    android:drawablePadding="8dp"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:textColor="@android:color/black"/>

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:layout_marginTop="10dp"
                    android:hint="@string/address"
                    android:drawableStart="@drawable/location"
                    android:drawablePadding="8dp"
                    android:inputType="textMultiLine"
                    android:padding="10dp"
                    android:textColor="@android:color/black"/>

                <Button
                    android:id="@+id/save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/btnshape"
                    android:text="@string/save"
                    android:textAllCaps="true"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>