<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@drawable/background_shape"
    tools:context=".UserPic">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_profile_image"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_margin="8dp"/>
    <LinearLayout
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="#8E8F5F">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/person"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp"/>
        <TextView
            android:id="@+id/change_profile_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_profile"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">


        <LinearLayout
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/cancel_TV"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/btnshape"
                android:text="@string/cancle"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/save_TV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/btnshape"
                android:text="@string/save"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>