<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_shape"
        android:orientation="vertical"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_description"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="@color/black" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                android:background="@drawable/edit_text_background"
                android:gravity="center"
                android:text="@string/date"
                app:drawableRightCompat="@drawable/arrow" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/product_ET"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_toStartOf="@+id/speaker_pName"
                    android:layout_toLeftOf="@+id/speaker_pName"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/enter_product_name"
                    android:inputType="text"
                    android:maxLines="5" />

                <ImageButton
                    android:id="@+id/speaker_pName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="4dp"
                    android:src="@drawable/micoff"
                    android:layout_alignParentRight="true"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/amount_ET"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/amount"
                    android:inputType="number"
                    android:layout_toStartOf="@+id/speaker_tk"
                    android:layout_toLeftOf="@+id/speaker_tk"
                    android:layout_alignParentLeft="true"/>

                <ImageButton
                    android:id="@+id/speaker_tk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="4dp"
                    android:src="@drawable/micoff"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:weightSum="2">

            <Button
                android:id="@+id/addId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".96"
                android:background="@drawable/btnshape"
                android:gravity="center"
                android:text="@string/sale"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".08" />

            <Button
                android:id="@+id/subId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".96"
                android:background="@drawable/btnshape"
                android:gravity="center"
                android:text="@string/payed"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>