<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/edit_text_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:id="@+id/date_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".65"
                android:text="@string/date"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/cardview_dark_background"/>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".01"
                android:background="#eee"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp">

            <TextView
                android:id="@+id/product_TV_id"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight=".65"
                android:gravity="center"
                android:text="@string/product_name"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/cardview_dark_background" />
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".01"
                android:background="#eee"/>

            <TextView
                android:id="@+id/cAmount_TV_id"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight=".34"
                android:gravity="center"
                android:maxLines="5"
                android:text=""
                android:hint="@string/taka"
                android:textColor="@color/cardview_dark_background"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>